// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmailInput renders icon when it is passed by props 1`] = `
<div
  className="lab-input "
>
  <input
    autoComplete="off"
    className="lab-input__field "
    id="testInput"
    name="testInput"
    onChange={[Function]}
    placeholder=" "
    type="email"
    value=""
  />
  <div
    className="lab-input__borders"
  />
  
  
  <div
    className="lab-input__label-wrapper"
  >
    
    <label
      className="lab-input__label"
      htmlFor="testInput"
    >
      Test Input
    </label>
  </div>
  <button
    className="lab-input__icon"
    onClick={[Function]}
    type="button"
  >
    <span
      className="lab-icon lab-icon--star lab-icon--mineral-70"
    />
  </button>
  
</div>
`;

exports[`EmailInput renders prefix when it is passed by props 1`] = `
<div
  className="lab-input "
>
  <input
    autoComplete="off"
    className="lab-input__field lab-input__field--prefixed "
    id="testInput"
    name="testInput"
    onChange={[Function]}
    placeholder=" "
    type="email"
    value=""
  />
  <div
    className="lab-input__borders"
  />
  <span
    className="lab-input__prefix"
  >
    R$
  </span>
  
  <div
    className="lab-input__label-wrapper"
  >
    <span
      className="lab-input__prefix"
    >
      R$
    </span>
    <label
      className="lab-input__label"
      htmlFor="testInput"
    >
      Test Input
    </label>
  </div>
  
</div>
`;

exports[`EmailInput renders required icon when it is passed by props 1`] = `
<div
  className="lab-input "
>
  <input
    autoComplete="off"
    className="lab-input__field "
    id="testInput"
    name="testInput"
    onChange={[Function]}
    placeholder=" "
    type="email"
    value=""
  />
  <div
    className="lab-input__borders"
  />
  
  
  <div
    className="lab-input__label-wrapper"
  >
    
    <label
      className="lab-input__label"
      htmlFor="testInput"
    >
      Test Input
    </label>
  </div>
  <button
    className="lab-input__icon"
    onClick={[Function]}
    type="button"
  >
    <span
      className="lab-icon lab-icon--star lab-icon--mineral-70"
    />
  </button>
  
</div>
`;

exports[`EmailInput renders suffix when it is passed by props 1`] = `
<div
  className="lab-input "
>
  <input
    autoComplete="off"
    className="lab-input__field lab-input__field--suffixed "
    id="testInput"
    name="testInput"
    onChange={[Function]}
    placeholder=" "
    type="email"
    value=""
  />
  <div
    className="lab-input__borders"
  />
  
  <div
    className="lab-input__suffix"
  >
    .com
  </div>
  <div
    className="lab-input__label-wrapper"
  >
    
    <label
      className="lab-input__label"
      htmlFor="testInput"
    >
      Test Input
    </label>
  </div>
  
</div>
`;

exports[`EmailInput renders with base props 1`] = `
<div
  className="lab-input "
>
  <input
    autoComplete="off"
    className="lab-input__field "
    id="testInput"
    name="testInput"
    onChange={[Function]}
    placeholder=" "
    type="email"
    value=""
  />
  <div
    className="lab-input__borders"
  />
  
  
  <div
    className="lab-input__label-wrapper"
  >
    
    <label
      className="lab-input__label"
      htmlFor="testInput"
    >
      Test Input
    </label>
  </div>
  
</div>
`;
